[tool.poetry]
name = "pyweather"
version = "0.1.0"
description = "A tool for checking the weather forecast."
authors = ["Joshua Spratt <jspratt02@icloud.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
